Travel overflow fix, wonderland recovery fix

--- a/assets/css/dahsboard-styles.css
+++ b/assets/css/dahsboard-styles.css
@@ -31,6 +31,8 @@ body {
   height: 100dvh;
   width: 100vw;
   border: 5px solid #000201;
+  position: relative;
+  overflow: hidden;
 }
 
 .fullscreen-wrapper {
@@ -40,6 +42,7 @@ body {
   align-items: center;
   justify-content: center;
   position: relative;
+  overflow: hidden;
   background-color: var(--white);
   border: 5px solid var(--background-color);
   border-radius: 15px;
